Create SSL listener

--- a/templates/osb_environment.properties.j2
+++ b/templates/osb_environment.properties.j2
@@ -12,6 +12,7 @@ cluster_name={{ osb_cluster_name }}
 cluster_nodes={{ osb_cluster_nodes | join(',') }}
 managed_servers_per_machine={{ osb_managed_servers_per_machine }}
 managed_server_listen_port_start={{ osb_managed_server_listen_port_start }}
+managed_server_ssl_listen_port_start={{ osb_managed_server_ssl_listen_port_start }}
 managed_server_listen_address={{ osb_managed_server_listen_address }}
 
 #
